<resources>
    <string name="app_name">TwoActivities</string>
    <string name="send">Send</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="text_header">Message recived</string>
    <string name="name">Name</string>
    <string name="enterReply">Enter your reply</string>
    <string name="text_header_reply">Reply recived</string>
    <string name="reply">Reply</string>
</resources>
